<resources>
    <string name="app_name">Tripnary</string>
    <string name="brand_slogan">El mundo en tus \nmanos\!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_notes_icon">No Notes icon</string>
    <string name="no_notes_text">You have no tasks</string>
    <string name="menu_search_item">Search</string>
    <string name="menu_add_item">Add</string>
    <string name="menu_edit_item">Edit</string>
    <string name="menu_remove_item">Remove</string>
    <string name="search_query_hint">Search your Note</string>
    <string name="notes_list_screen_title">Notes</string>
    <string name="add_note_screen_title">Add a note</string>
    <string name="tag_list_screen_title">Tags</string>
    <string name="add_note_title_hint_text">Title</string>
    <string name="add_note_tag_text">Tag</string>
    <string name="add_note_description_hint_text">Description</string>
    <string name="add_note_action">Add Note</string>
    <string name="add_note_success_message">Note Added\!</string>
    <string name="add_note_empty_title_error">Please add a title for the note</string>
    <string name="add_note_empty_tag_error">Please add a tag for the note</string>
    <string name="remove_note_confirm_title">Remove Note</string>
    <string name="remove_note_confirm_message">Are you sure you want to remove %s?</string>
    <string name="remove_tag_confirm_title">Remove Tag</string>
    <string name="remove_tag_confirm_message">Are you sure you want to remove %s?</string>
    <string name="add_tag_alert_title">Add a tag</string>
    <string name="edit_tag_alert_title">Edit tag</string>
    <string name="add_tag_positive_action">Add</string>
    <string name="edit_tag_positive_action">Edit</string>
    <string name="edit_tag_empty_name_error">Please add a name</string>
    <string name="confirm_alert_positive_action">Yes</string>
    <string name="confirm_alert_negative_action">Cancel</string>
    <string name="edit_profile_toolbar_title">Editar perfil</string>
    <string name="edit_profile_full_name">Jonathan Doe</string>
    <string name="edit_profile_email">test@hotmail.com</string>
    <string name="edit_profile_name_label">Nombre</string>
    <string name="edit_profile_name_hint">Ingresa tu nombre</string>
    <string name="edit_profile_email_label">Correo electrónico</string>
    <string name="edit_profile_email_hint">Ingresa tu dirección de correo electrónico</string>
    <string name="edit_profile_phone_label">Teléfono</string>
    <string name="edit_profile_phone_hint">Ingresa tu número de teléfono</string>
    <string name="edit_profile_latitude_hint">Ingresa tu latitud</string>
    <string name="edit_profile_longitude_hint">Ingresa tu longitud</string>
    <string name="dob_label">Fecha de nacimiento</string>
    <string name="latitud_label">Latitud</string>
    <string name="longitud_label">Longitud</string>
    <string-array name="edit_profile_days_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="categorias_viaje_array">
        <item>Histórico</item>
        <item>Bosque</item>
        <item>Aventura</item>
        <item>Natural</item>
        <item>Religioso</item>
        <item>Ciudad</item>
        <item>Arqueológico</item>
        <item>Emblemático</item>
        <item>Museo</item>
        <item>Parque nacional</item>
        <item>Sagrado</item>
        <item>Jardín</item>
        <item>Industrial</item>
        <item>Literario</item>
        <item>Cinematográfico</item>
        <item>Gastronómico</item>
        <item>Monumento</item>
        <item>Científico</item>
        <item>Entretenimiento</item>
        <item>Arquitectura</item>
    </string-array>
    <string-array name="temporadas_array">
        <item>Primavera</item>
        <item>Verano</item>
        <item>Otoño</item>
        <item>Invierno</item>
    </string-array>
    <string-array name="continentes_array">
        <item>África</item>
        <item>América del Norte</item>
        <item>América del Sur</item>
        <item>Asia</item>
        <item>Europa</item>
        <item>Oceanía</item>
    </string-array>
    <string-array name="edit_profile_months_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="edit_profile_years_array">
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>
    <string-array name="roles_colaboradores">
        <item>Lector</item>
        <item>Editor</item>
    </string-array>
    <string name="edit_profile_submit_button_label">Enviar</string>
    <string name="edit_profile_date_button_label">Escoger Fecha</string>
    <string name="my_profile_toolbar_title">Mi perfil</string>
    <string name="my_profile_full_name">Jonathan Doe</string>
    <string name="my_profile_email">jonathan@yahoo.com</string>
    <string name="my_profile_edit_profile_label">Editar perfil</string>
    <string name="my_profile_app_settings_label">Configuración</string>
    <string name="my_profile_my_orders_label">Mis pedidos</string>
    <string name="my_profile_my_wishlist_label">Mi lista de deseos</string>
    <string name="my_profile_my_wallet_label">Mi billetera</string>
    <string name="my_profile_change_language_label">Cambiar idioma</string>
    <string name="my_profile_planes_label">Ver Planes de Viaje</string>
    <string name="my_profile_coupons_label">Cupones</string>
    <string name="my_profile_estadisticas_label">Estadísticas</string>
    <string name="image_content_description">Descripción del contenido de la imagen</string>
    <string name="content_description">Descripción del contenido</string>
    <string name="register_screen_toolbar_title">Registrarse</string>
    <string name="register_screen_heading">Registrarse</string>
    <string name="register_interests_heading">Selecciona tus preferencias de viaje</string>
    <string name="register_screen_info">Hola, ingresa tus detalles para crear una nueva cuenta de cliente.</string>
    <string name="register_name_label">Nombre</string>
    <string name="register_travel_question_label">¿Qué tipo de viaje estás buscando?</string>
    <string name="register_name_hint">Ingresa tu nombre</string>
    <string name="register_email_label">Correo electrónico</string>
    <string name="documento_url_label">URL</string>
    <string name="register_contintents_label">¿Cuál es tu destino preferido?</string>
    <string name="register_email_hint">Ingresa tu dirección de correo electrónico</string>
    <string name="register_phone_label">Teléfono</string>
    <string name="register_seasons_label">¿Cuál temporada prefieres?</string>
    <string name="register_phone_hint">Ingresa tu contraseña</string>
    <string name="register_log_me_in_label">Iniciarme sesión</string>
    <string name="register_button_label">Registrarse</string>
    <string name="register_question_bottom">¿Ya tienes una cuenta?</string>
    <string name="register_login_here_label">Inicia sesión aquí</string>
    <string name="register_password_label">Contraseña</string>
    <string name="register_confirm_password_label">Confirmar contraseña</string>
    <string name="register_age_label">Fecha de nacimiento</string>
    <string name="register_confirm_password_hint">Confirme su contraseña</string>
    <string name="information_screen_welcome">Bienvenido a Tripnary</string>
    <string name="information_screen_info">Planea el viaje perfecto con Tripnary</string>
    <string name="information_screen_action_label">Siguiente</string>
    <string name="item_home_bottom_nav_1">Inicio</string>
    <string name="item_home_bottom_nav_2">Carrito</string>
    <string name="item_home_bottom_nav_3">Perfil</string>
    <string name="item_home_bottom_nav_4">Notificaciones</string>
    <string name="item_home_drawer_nav_1">Inicio</string>
    <string name="item_home_drawer_nav_2">Soporte y ayuda</string>
    <string name="item_home_drawer_nav_3">Lista de Deseos</string>
    <string name="item_home_drawer_nav_mensajes">Mensajes</string>
    <string name="item_home_drawer_nav_4">Mis viajes</string>
    <string name="item_home_drawer_nav_5">Página 404 No encontrada</string>
    <string name="item_home_drawer_nav_6">Sin conexión a Internet</string>
    <string name="item_home_drawer_nav_7">Preguntas frecuentes</string>
    <string name="item_home_drawer_nav_8">Iniciar sesión</string>
    <string name="item_home_drawer_nav_9">Registrarse</string>
    <string name="item_home_drawer_nav_10">Vuelos</string>
    <string name="item_home_drawer_nav_11">Hoteles</string>
    <string name="item_home_drawer_nav_12">Soporte</string>
    <string name="home_drawer_open">abrir</string>
    <string name="home_drawer_close">cerrar</string>
    <string name="home_greeting">¡Hola, Jack!</string>
    <string name="home_search_here_hint">Buscar aquí…</string>
    <string name="home_categories_label">Categorías</string>
    <string name="home_lugares_label">Lugares Recomendados</string>
    <string name="home_most_popular_label">Más populares</string>
    <string name="home_offer_label">Oferta del día</string>
    <string name="home_recently_viewed_label">Vistos recientemente</string>
    <string name="home_scratch_win_label">Rascar y ganar</string>
    <string name="home_see_all_label">Ver todo</string>
    <string name="home_best_restaurants_label">Mejores restaurantes</string>
    <string name="home_best_restaurant_distance">30 minutos</string>
    <string name="home_best_restaurant_name">Eats Meets West</string>
    <string name="home_best_restaurant_rating">5</string>
    <string name="home_best_restaurant_rating_count">(25)</string>
    <string name="item_lugares_home_title">Gatos</string>
    <string name="login_screen_toolbar_title">Inicio sesión</string>
    <string name="login_screen_heading">Inicio de sesión</string>
    <string name="login_screen_info">Ingrese sus datos para poder acceder a la aplicación</string>
    <string name="login_email_label">Email</string>
    <string name="login_email_hint">joe@gmail.com</string>
    <string name="login_password_label">Contraseña</string>
    <string name="login_password_hint">********</string>
    <string name="login_remember_me_label">Recordarme</string>
    <string name="ingresar_documento_heading">Ingresa una imagen o documento relacionado a tu viaje</string>
    <string name="update_plan_nombre_label">Nombre</string>
    <string name="update_plan_nombre_hint">Ingresa el nombre</string>
    <string name="ingresar_documento_placeholder">Imágenes o Documentos</string>
    <string name="ingresar_documento_plan_label">Guardar</string>
    <string name="ingresar_documentos_screen_toolbar_title">Ingresa Documento</string>
    <string name="ingresar_documento_label">Elige el documento</string>
</resources>