<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/SteelBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:titleTextColor="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="@string/register_screen_toolbar_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_30sdp">

            <TextView
                android:id="@+id/text_screen_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/register_screen_heading"
                android:textColor="@color/textHighContrast"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_screen_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/open_sans_medium"
                android:text="@string/register_screen_info"
                android:textColor="@color/textLowContrast"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@id/text_screen_title"
                app:layout_constraintStart_toStartOf="@id/text_screen_title"
                app:layout_constraintTop_toBottomOf="@+id/text_screen_title" />

            <TextView
                android:id="@+id/text_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_45sdp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/register_name_label"
                android:textColor="@color/textHighContrast"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@id/text_screen_info"
                app:layout_constraintStart_toStartOf="@id/text_screen_info"
                app:layout_constraintTop_toBottomOf="@+id/text_screen_info" />

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:autofillHints="text"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="@dimen/_15sdp"
                android:fontFamily="@font/open_sans_medium"
                android:hint="@string/register_name_hint"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_15sdp"
                android:textColor="@color/textHighContrast"
                android:textColorHint="@color/textLowContrast"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@id/text_name_label"
                app:layout_constraintStart_toStartOf="@id/text_name_label"
                app:layout_constraintTop_toBottomOf="@+id/text_name_label" />

            <TextView
                android:id="@+id/text_email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/register_email_label"
                android:textColor="@color/textHighContrast"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@id/edit_text_name"
                app:layout_constraintStart_toStartOf="@id/edit_text_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="@dimen/_15sdp"
                android:fontFamily="@font/open_sans_medium"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_15sdp"
                android:textColor="@color/textHighContrast"
                android:textColorHint="@color/textLowContrast"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@id/text_email_label"
                app:layout_constraintStart_toStartOf="@id/text_email_label"
                app:layout_constraintTop_toBottomOf="@+id/text_email_label" />

            <TextView
                android:id="@+id/text_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/register_phone_label"
                android:textColor="@color/textHighContrast"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@id/edit_text_email"
                app:layout_constraintStart_toStartOf="@id/edit_text_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

            <EditText
                android:id="@+id/edit_text_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:autofillHints="phone"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="@dimen/_15sdp"
                android:fontFamily="@font/open_sans_medium"
                android:hint="@string/register_phone_hint"
                android:inputType="phone"
                android:paddingHorizontal="@dimen/_15sdp"
                android:textColor="@color/textHighContrast"
                android:textColorHint="@color/textLowContrast"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_password_label" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:fontFamily="@font/open_sans_medium"
                android:text="@string/register_log_me_in_label"
                android:textColor="@color/textLowContrast"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@id/edit_text_phone"
                app:layout_constraintStart_toStartOf="@id/edit_text_phone"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_phone" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_52sdp"
                android:backgroundTint="@color/SteelBlue"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/register_button_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:cornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/checkbox"
                app:layout_constraintStart_toStartOf="@id/checkbox"
                app:layout_constraintTop_toBottomOf="@+id/checkbox" />

            <TextView
                android:id="@+id/text_footer_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/open_sans_medium"
                android:text="@string/register_question_bottom"
                android:textColor="@color/textLowContrast"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toStartOf="@+id/text_login_here"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@id/button_submit"
                app:layout_constraintTop_toBottomOf="@+id/button_submit" />

            <TextView
                android:id="@+id/text_login_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/register_login_here_label"
                android:textColor="@color/textHighContrast"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/text_footer_question"
                app:layout_constraintEnd_toEndOf="@id/button_submit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_footer_question"
                app:layout_constraintTop_toTopOf="@+id/text_footer_question" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>